CI/DEV/openshift/deployment.yml
# ------------------- Route  ------------------- #
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: distclientes-route
  namespace: ocp-dev
spec:
  host: distclientes.dev.apps.ocp4mqa.grupodifare.com
  to:
    kind: Service
    name: distclientes-services
  port:
    targetPort: http
---
# ------------------- Service ------------------- #
apiVersion: v1
kind: Service
metadata:
  labels:
    app: distclientes
  name: distclientes-services
  namespace: ocp-dev
spec:
  ports:
    - name: http
      protocol: TCP 
      port: 2202
      targetPort: 80
  selector:
    app: distclientes
---
# ------------------ Deployment ----------------- #
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: distclientes
  name: distclientes-deploy
  namespace: ocp-dev
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: distclientes
  strategy:
    type: RollingUpdate
    rollingUpdate:
        maxSurge: 1
        maxUnavailable: 1
  minReadySeconds: 2
  template:
    metadata:
      labels:
        app: distclientes
    spec:
      serviceAccountName: default
      nodeSelector:
        DEV: "TRUE"
      containers:
      - name: distclientes
        image: dockernp.grupodifare.com/dev-distclientes-image
        resources:
          limits:
            cpu: "250m"
            memory: 256Mi
          requests:
            cpu: "50m"
            memory: 64Mi
        ports:
        - containerPort: 80
          name: distclientes
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health/
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 3
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health/
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 3
          periodSeconds: 20
      imagePullSecrets:
       - name: nexus-secret
